testsuite/gnatprove/tests/T623-013__output_checks/test.out
default command-line output
---------------------------
 medium: overflow check might fail, cannot prove upper bound for X + 1
--> incr.adb:3:11
    3 |       X := X + 1;
      |            ~~^~~
      + reason for check: result of addition must fit in a 32-bits machine integer
      + possible fix: subprogram at line 1 should mention X in a precondition
    1 |    procedure Incr (X : in out Integer) is
      |    ^
      + provers gave up before completing the proof

brief output
------------
incr.adb:3:11: high: overflow check might fail, cannot prove upper bound for X + 1

pretty output
-------------
 high: overflow check might fail, cannot prove upper bound for X + 1
--> incr.adb:3:11
    3 |       X := X + 1;
      |            ~~^~~
      + e.g. when X = Integer'Last
      + reason for check: result of addition must fit in a 32-bits machine integer
      + possible fix: subprogram at line 1 should mention X in a precondition
    1 |    procedure Incr (X : in out Integer) is
      |    ^
      + provers gave up before completing the proof

one-line output
---------------
incr.adb:3:11: high: overflow check might fail, cannot prove upper bound for X + 1 (e.g. when X = Integer'Last) [reason for check: result of addition must fit in a 32-bits machine integer] [possible fix: subprogram at line 1 should mention X in a precondition] [provers gave up before completing the proof]

incorrect output value
----------------------
error: wrong argument for --output
Try "gnatprove --help" for more information.
